--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     @media (prefers-color: dark){
       :root{--bg:#111;--text:#f1f5f9}
     }
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial;background:var(--bg);color:var(--text);line-height:1.55}
-    header{padding:1.2rem 1rem;background:var(--accent);color:#fff;font-size:1.3rem;font-weight:600}
-    main{max-width:760px;margin:auto;padding:1.2rem}
-    input{width:100%;padding:.6rem .8rem;font-size:1rem;border:2px solid #cbd5e1;border-radius:.4rem;margin-bottom:1.2rem}
-    .card{border:1px solid #e2e8f0;border-radius:.5rem;padding:1rem;margin-bottom:.8rem;transition:box-shadow .2s}
-    .card:hover{box-shadow:0 5px 15px rgba(0,0,0,.08)}
-    h3{margin:.2rem 0 .6rem}
-    a{color:var(--accent);text-decoration:none}
-    footer{text-align:center;padding:2rem 1rem;font-size:.85rem;color:#64748b}
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial;background:var(--bg);color:var(--text);line-height:1.55;}
+header{padding:1.2rem 1rem;background:var(--accent);color:#fff;font-size:1.3rem;font-weight:600;}
+main{max-width:760px;margin:auto;padding:1.2rem;}
+input{width:100%;padding:.6rem .8rem;font-size:1rem;border:2px solid #cbd5e1;border-radius:.4rem;margin-bottom:1.2rem;}
+.card{border:1px solid #e2e8f0;border-radius:.5rem;padding:1rem;margin-bottom:.8rem;transition:box-shadow .2s;}
+.card:hover{box-shadow:0 5px 15px rgba(0,0,0,.08);}
+h3{margin:.2rem 0 .6rem;}
+a{color:var(--accent);text-decoration:none;}
+footer{text-align:center;padding:2rem 1rem;font-size:.85rem;color:#64748b;}
   </style>
 </head>
 <body>
