--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     footer{margin-top:auto;padding-top:2rem;font-size:.75rem;color:#64748b}
   </style>
 </head>
+  <header>
+  <div class="logo">RMPD Servis</div>
+  <nav>
+    <a href="carrier.html">Кабінет перевізника</a>
+    <a href="https://t.me/YOUR_BOT_NAME?start=track" target="_blank">Telegram /track</a>
+  </nav>
+</header>
 <body>
   <header>
     <div class="logo">RMPD Servis</div>
